--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -1,15 +1,18 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="ru" >
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>{% block title %} {% endblock %}</title>
   <link rel="shortcut icon" type='x-icon' href="{% static 'favicon.ico' %}"/>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
- <script src="//unpkg.com/alpinejs" defer></script>
- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<style>
+  
+  <!-- Обновленные скрипты -->
+  <script defer src="https://unpkg.com/alpinejs@3.12.0/dist/cdn.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+  
+  <style>
     [x-cloak] {
       display: none;
     }
