--- a/board/templates/workspace.html
+++ b/board/templates/workspace.html
@@ -13,7 +13,7 @@
           <a href="/" class="block px-4 py-2 rounded-lg hover:bg-gray-700">Главная</a>
         </li>
         <li class="mb-2">
-          <a href="/tasks" class="block px-4 py-2 rounded-lg hover:bg-gray-700">Уведомления</a>
+          <a href="/notifications" class="block px-4 py-2 rounded-lg hover:bg-gray-700">Уведомления</a>
         </li>
         <li class="mb-2">
           <a href="/settings" class="block px-4 py-2 rounded-lg hover:bg-gray-700">Моя организация</a>
