Доработка главной и уведомлений

--- a/board/templates/board.html
+++ b/board/templates/board.html
@@ -15,7 +15,7 @@
           <a href="/notifications" class="block px-4 py-2 rounded-lg hover:bg-gray-700">Уведомления</a>
         </li>
         <li class="mb-2">
-          <a href="/settings" class="block px-4 py-2 rounded-lg hover:bg-gray-700">Моя организация</a>
+          <a href="/organization" class="block px-4 py-2 rounded-lg hover:bg-gray-700">Моя организация</a>
         </li>
       </ul>  
       <h2 class="text-xl font-bold mt-6">Пространства</h2>
